# jetson-ros

./: README.md
motor_node/: CMakeLists.txt  package.xml
motor_node/launch/: move_base.launch  robot.launch  rplidar.launch  rtabmap.launch  rviz.launch  ubuntu.launch
motor_node/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml
motor_node/resources/room1/: map.pgm  map.yaml
motor_node/rviz/: motor_node.rviz
motor_node/src/: motor.cpp  motor.h  motor_node.cpp
motor_node/xacro/: robot.xacro  roombot.xacro
motor_test/: CMakeLists.txt  package.xml
motor_test/src/: gpio.cpp  gpio.h  motor_test.cpp
